# pymumps

./: .gitattributes  .gitignore  CMakeLists.txt  MANIFEST.in  README.md  generate_wrappers.py  pyproject.toml  setup.py
.github/workflows/: conda.yml  python-app.yml  ubuntu.yml
examples/: dsimpletest.py  matrix.npz  test_sym_fact.py  zsimpletest.py
mumps/: __init__.py  _dmumps.c  _dmumps.pyx  _mumps.tpl  _zmumps.pyx
tests/: test_pymumps.py
